# hrf-universe-home-task

./: README.md  api.py  pyproject.toml  statistics_scipt.py
home_task/: __main__.py  db.py  models.py  statistics_calculator.py  statistics_service.py
migrations/versions/: 3a06d5874e2c_add_hire_statistics.py  991ecb2bf269_load_data.py  c3c6f73e81b4_add_hire_statistics.py
